added some graphs

--- a/report/ExampleFile.tex
+++ b/report/ExampleFile.tex
@@ -307,8 +307,15 @@ First of all the influence of the entrance velocity is visualized. Then the infl
 
 \InsFig{mixtfrac}{mixture fraction}{fraction}
 
+\newpage
+\InsFig{Velocity_Ti0_01_noBluff}{mixture fraction at constant turbulent intensity of 1 \%}{fig1}
+\InsFig{Velocity_Ti0_03_noBluff}{mixture fraction at constant turbulent intensity of 3 \%}{fig2}
+\InsFig{Velocity_Ti0_06_noBluff}{mixture fraction at constant turbulent intensity of 6 \%}{fig3}
 
-
+\newpage
+\InsFig{Velocity_Ti0_01_12_60}{mixture fraction at constant turbulent intensity of 1 \%, with large bluff body}{fig4}
+\InsFig{Velocity_Ti0_01_16_50}{mixture fraction at constant turbulent intensity of 1 \%, with medium bluff body}{fig5}
+\InsFig{Velocity_Ti0_01_20_45}{mixture fraction at constant turbulent intensity of 1 \%, with small bluff body}{fig6}
 \newpage
 \InsTab{Table}
 
