Wrote piece for the results
Wrote piece for the results

--- a/report/ExampleFile.tex
+++ b/report/ExampleFile.tex
@@ -301,19 +301,29 @@ Choosing a simulation grid is a trade of between simulation quality and simulati
 Figure \ref{fig:gridconv} shows the refinement number on the horizontal axis, with 1 corresponding the the coarsest grid (NPI=10 and NPJ=20) and 5 to the finest grid. It can be seen from the graph that for all of the grids, th error is very small. The error increases for the first three grids, after which the error converges to zero. However, the grids corresponding to refinement 4 and 5 were computationally too expensive. Therefore, refinement 3, corresponding to a grid of NPI=40 and NPJ=80 is chosen.
 
 \subsubsection{Simulation results}
-Now, after all the cases are simulated on the previously chosen grid. The results will be discussed in this section. First the influence of the velocity and turbulence entrance intensity will be discussed. Thereafter, the results with bluff-body are discussed, looking at the influence of bluff body size on the mixing.\\
-The quality of mixing is evaluated at the exit of the domain. Since a fraction of 1 enters at the bottom half, and a fraction of 0 at the top half. Figure \ref{fig:fraction} shows an example of the mixture fraction inside the simulation domain. The figure shows the seperated inlet of both fractions. The mixture at the outlet of the domain, shows that the turbulence and diffusion have mixed the two fractions. As a measure of the quality of mixing the value of the mixture fraction along the y-axis is visualized in a graph. The best possible mixing at the exit would be a uniform mixture fraction value of 0.5, representing fully mixed value.\\
+Now, after all the cases are simulated on the previously chosen grid. The results will be discussed in this section. First the influence of the velocity and turbulence entrance intensity will be discussed. Thereafter, the results with bluff-body are discussed, looking at the influence of bluff-body size on the mixing.\\
+The quality of mixing is evaluated at the exit of the domain. Since a fraction of 1 enters at the bottom half, and a fraction of 0 at the top half. Figure \ref{fig:fraction} shows an example of the mixture fraction inside the simulation domain without bluff-body. Figure \ref{fig:fracionBluff} shows the mixture fraction in the domain with a bluff-body. The figures show the seperated inlet of both fractions. The mixture at the outlet of the domain, shows that the turbulence and diffusion have mixed the two fractions. As a measure of the quality of mixing the value of the mixture fraction along the y-axis is visualized in a graph. The best possible mixing at the exit would be a uniform mixture fraction value of 0.5, representing fully mixed value.\\
 First of all the influence of the entrance velocity is visualized. Then the influence of the turbulence entrance intensity is presented, after which the bluff-body results are shown.
 
 \InsFig{mixtfrac}{mixture fraction}{fraction}
+\InsFig{mixtfracBluffbod}{mixture fraction with bluff-body}{fractionBluff}
 
-\newpage
+\subsubsection{Results without bluff-body}
+First of all the results without the bluff-body. As explained the turbulence intensity at the inlet is intensified from $T_i=0.01\%$, to $T_i=0.06\%$. For every intensity the inlet velocity is increased. The graphs are represented for every turbulence inlet intensity.\\
+Figure\ref{fig:fig1} shows the mixture fraction at the outlet of the geometry as a function of height. The graph corresponds to a turbulence inlet intensity of 1\%. The three differently coloured lines represent the three different inlet velocities of 1, 5 and 10 [m/s]. From the figure one can conclude that the lowest velocity yields the highest mixing quality. This is because for the lowest velocity the mixture fraction over the outlet is closest to perfectly mixed. The higher the inlet velocity, the lower the quality of mixing. However, the difference between 5 and 10 [m/s] is almost unnoticeable. The results can be explained by the residential time of a small volume of fluid inside the domain. For the lowest inlet velocity, a fluid volume resides longer inside the domain. Hence, experiencing more turbulence and therefore better mixing.
+
 \InsFig{Velocity_Ti0_01_noBluff}{mixture fraction at constant turbulent intensity of 1 \%}{fig1}
+After increasing the turbulence inlet intensity to 3\% and 6\%, as shown in Figures \ref{fig:fig2} and \ref{fig:fig3} the results look similar at first glance. Looking into the results in a more detailed manner shows that the quality of mixing for the higher inlet velocities, 5 and 10 [m/s] has increased. It can be noticed that if the turbulence intensity at the inlet increases, the results for all inlet velocities are converging. This can be explained by the fact that increasing the turbulence entrance intensity increases the velocity fluctuations, which enhances the mixing, resulting ing better mixing even at higher velocities.
 \InsFig{Velocity_Ti0_03_noBluff}{mixture fraction at constant turbulent intensity of 3 \%}{fig2}
 \InsFig{Velocity_Ti0_06_noBluff}{mixture fraction at constant turbulent intensity of 6 \%}{fig3}
+Overall, the turbulence intensity shows little influence on the quality of mixing. However, these simulations are executed with a Peclet (Pe) number of 100. This dimensionless number indicates that transport through flow is more important than transport through turbulent eddies. Decreasing the Pe number will increase the effects of turbulent mixing.\\
+HIER DAN HET STUK MET ANDER PE NUMBER????????
 
-\newpage
+\subsubsection{Results with bluff-body }
+Since the aim is to find the influence of a bluff-body on the mixing quality, a bluff-body was added in the geometry and varied in size. While changing the size of the bluff-body, the turbulence entrance intensity is kept constant at 1\%. For every bluff-body size, the same velocities are simulated as done in the cases without bluff-body.
+
 \InsFig{Velocity_Ti0_01_12_60}{mixture fraction at constant turbulent intensity of 1 \%, with large bluff body}{fig4}
+figure \ref{fig:fig4} shows the results for the first bluff-body, with $h/D=XXXXXXX $. Again, the mixture fraction is extracted at the outlet of the geometry. First thing to notice is the steep gradient at the top and bottom. It is clear that the mixing quality is higher with respect to the cases without bluff-body. This can be explained by two phenomena. The first is the Pe number, which causes the mixture to not mix properly in the case without bluff-body. The second phenomena is that the bluff-body introduces extra wakes, causing the fluid to mix better. Decreasing the size of the bluff-body to $h/D=XXXXXXX $ and $h/D=XXXXXXX $ as shown in Figures \ref{fig:fig5} and \ref{fig:fig6} shows little to none influence on the quality of mixing at the outlet of the geometry. This may be due to the Pe number having a value of 100. Again, decreasing should increase the quality of mixing.
 \InsFig{Velocity_Ti0_01_16_50}{mixture fraction at constant turbulent intensity of 1 \%, with medium bluff body}{fig5}
 \InsFig{Velocity_Ti0_01_20_45}{mixture fraction at constant turbulent intensity of 1 \%, with small bluff body}{fig6}
 \newpage
